# lsc

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE  README.md  Setup.hs  check.sh  lsc.cabal  package.yaml  profile.sh  stack-profile.sh  stack-run.sh  stack.yaml  test.sh
LICENSES/: CC0-1.0.txt
app/: Main.hs  Test.hs
doc/: Evid.hs  Evidence.hs
sample/: and2.blif  and3.blif  carryripple.blif  fulladder.blif  map9v3.def  osu035.lef  picorv32.blif  picorv32.fir  queue_1.blif  rot.blif
src/: LSC.hs  Main.hs
src/BLIF/: Builder.hs  Lexer.x  Parser.hs  Syntax.hs  Tokens.hs
src/LEF/: Lexer.x  Parser.hs  Syntax.hs  Tokens.hs
src/LSC/: Animation.hs  Arboresence.hs  Arrow.hs  BLIF.hs  BinarySearch.hs  Cartesian.hs  CellFlipping.hs  Component.hs  D3.hs  DEF.hs  Deque.hs  Duval.hs  Easy.hs  Entropy.hs  Estimate.hs  Exline.hs  Exlining.hs  FIFO.hs  FIR.hs  FM.hs  FastDP.hs  Force.hs  GlobalRouting.hs  HigherOrder.hs  Improve.hs  Inlining.hs  Integer.hs  KGGGP.hs  LEF.hs  LZ78.hs  Layout.hs  Legalization.hs  Legalize.hs  Log.hs  Logger.hs  Mincut.hs  Model.hs  NetGraph.hs  Numbers.hs  Operator.hs  (+19 more)
src/LSC/Parser/: Numbers.hs
src/Liberty/: Lexer.x  Parser.hs  Syntax.hs  Tokens.hs
src/SystemVerilog/: Language.hs  Lexer.x  Parser.y
src/Verilog/: Lexer.x  Parser.hs  Syntax.hs  Tokens.hs
test/: Spec.hs
test/Spec/: LSC.hs
test/Spec/LSC/: BinarySearch.hs  Deque.hs  Entropy.hs  FIFO.hs  FM.hs  FastDP.hs  GlobalRouting.hs  KGGGP.hs  Legalization.hs  Legalize.hs  Mincut.hs  Model.hs  NetGraph.hs  Polygon.hs  SegmentTree.hs  Types.hs  UnionFind.hs
tests/: fulladder.blif.test  rot.blif.test
