
name:                lsc
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Andreas Westerwick
maintainer:          westerwick@pconas.de
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lsc
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.2
                     , lsc
                     , transformers
                     , mtl
                     , text
  hs-source-dirs:      app
  ghc-options:         -Wall
  default-language:    Haskell2010
  other-modules:       Paths_lsc


library
  build-tools: alex
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:  base >=4.2
                , mtl
                , sbv
                , array
                , parsec
                , text
                , containers
                , blaze-svg
  exposed-modules:
      BLIF.Parser,
      BLIF.Syntax,
      BLIF.Tokens,
      BLIF.Lexer,

      LEF.Parser,
      LEF.Syntax,
      LEF.Tokens,
      LEF.Lexer,

      Liberty.Parser,
      Liberty.Syntax,
      Liberty.Tokens,
      Liberty.Lexer,

      LSC.Parser.Numbers,

      LSC,
      LSC.BLIF,
      LSC.LEF,
      LSC.SVG,
      LSC.Operator,
      LSC.Types
  other-modules:
      Paths_lsc
  default-language: Haskell2010
