
name:                lsc
version:             0.1.1.1
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Andreas Westerwick
maintainer:          westerwick@pconas.de
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lsc
  main-is:             Main.hs
  -- other-modules:     
  -- other-extensions:   
  build-tools:         happy, alex 
  build-depends:       base >=4.2
                     , lsc
                     , transformers
                     , mtl
                     , text
                     , process
                     , bytestring
  hs-source-dirs:      app
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
  other-modules:       Paths_lsc

executable lsc-test
  main-is:             Test.hs
  -- other-modules:       
  -- other-extensions:   
  build-tools:         happy, alex 
  build-depends:       base >=4.2
                     , lsc
                     , transformers
                     , mtl
                     , text
                     , file-embed
                     , bytestring
  hs-source-dirs:      app
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
  other-modules:       Paths_lsc

library
  build-tools:   happy, alex
  hs-source-dirs:
      src
  ghc-options: -Wall -O2
  build-depends:  base >=4.2
                , mtl
                , sbv
                , kan-extensions
                , monad-loops
                , monad-parallel
                , parallel
                , unordered-containers
                , reducers
                , array
                , parsec
                , vector
                , vector-algorithms
                , data-default
                , hashable
                , text
                , text-show
                , containers
                , blaze-svg
                , time
                , verilog
                , aeson
                , bytestring
  exposed-modules:
      BLIF.Builder,
      BLIF.Parser,
      BLIF.Syntax,
      BLIF.Tokens,
      BLIF.Lexer,

      LEF.Parser,
      LEF.Syntax,
      LEF.Tokens,
      LEF.Lexer,

      Liberty.Parser,
      Liberty.Syntax,
      Liberty.Tokens,
      Liberty.Lexer,

      Verilog.Parser,
      Verilog.Syntax,

      LSC,
      LSC.Arboresence,
      LSC.BLIF,
      LSC.D3,
      LSC.LEF,
      LSC.SVG,
      LSC.SuffixTree,
      LSC.Inlining,
      LSC.Exlining,
      LSC.NetGraph,
      LSC.Numbers,
      LSC.Types
  other-modules:
      Paths_lsc
  default-language: Haskell2010
